log/error.20150901.log
12:37:52.73 <error> router.js:15 /index request error!
12:37:59.07 <error> router.js:15 /index request error!
12:39:32.63 <error> router.js:15 /index request error!
12:39:36.78 <error> router.js:15 /tracer request error!
12:39:54.70 <error> router.js:15 /tracer request error!
12:40:10.97 <error> router.js:15 /tracer request error!
12:40:22.01 <error> router.js:15 /tracer request error!
12:40:25.84 <error> router.js:15 /tracer request error!
12:40:32.78 <error> router.js:15 /tracer/index request error!
12:40:37.80 <error> router.js:15 /tracer/ request error!
12:40:40.32 <error> router.js:15 /tracer request error!
12:40:57.10 <error> router.js:15 /tracer request error!
12:41:23.43 <error> router.js:15 /tracer request error!
12:41:36.23 <error> router.js:15 /tracer request error!
12:41:53.09 <error> router.js:15 /tracer request error!
12:42:18.35 <error> router.js:16 /tracer request error!
12:42:39.40 <error> router.js:37 [TypeError: undefined is not a function]
12:42:48.09 <error> router.js:37 [TypeError: undefined is not a function]
12:42:56.100 <error> router.js:37 [TypeError: undefined is not a function]
12:43:09.29 <error> router.js:37 [TypeError: undefined is not a function]
12:43:52.77 <error> router.js:37 [TypeError: undefined is not a function]
12:44:05.55 <error> router.js:37 [TypeError: undefined is not a function]
12:44:21.36 <error> router.js:37 [TypeError: undefined is not a function]
12:44:48.79 <error> router.js:37 [TypeError: undefined is not a function]
12:45:19.31 <error> router.js:37 [TypeError: undefined is not a function]
12:45:59.40 <error> router.js:38 [TypeError: undefined is not a function]
12:46:59.06 <error> router.js:39 [TypeError: undefined is not a function]
12:47:13.65 <error> router.js:38 [TypeError: undefined is not a function]
12:47:46.26 <error> router.js:38 [TypeError: first argument must be a string or Buffer]
12:48:11.65 <error> router.js:38 [TypeError: Cannot read property 'writeHead' of null]
12:56:07.45 <error> router.js:38 [TypeError: undefined is not a function]
12:56:24.92 <error> router.js:38 [TypeError: undefined is not a function]
12:56:40.67 <error> router.js:38 [TypeError: first argument must be a string or Buffer]
13:13:27.06 <error> router.js:38 [TypeError: first argument must be a string or Buffer]
14:08:53.70 <error> router.js:15 /tracer.js request error!
14:09:17.72 <error> router.js:15 /tracer.js request error!
17:41:23.60 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:41:34.95 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:41:52.30 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:42:01.29 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:42:39.71 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:42:56.26 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:11
        });;
        ^
Unexpected token }]
17:43:04.75 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:43:21.73 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:43:26.12 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:43:35.69 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:10
        });;
        ^
Unexpected token }]
17:56:19.43 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:23
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123})
                                                  ^
Unexpected token :]
17:56:31.12 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:23
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123})
                                                  ^
Unexpected token :]
17:58:22.46 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:21
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123})
                                                  ^
Unexpected token :]
17:58:53.57 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:21
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123},functio
                                                  ^
Unexpected token :]
17:58:55.60 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:21
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123},functio
                                                  ^
Unexpected token :]
17:59:16.28 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123},functio
                                                  ^
Unexpected token :]
17:59:17.76 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
        MongoDB.update({traceID:data.traceid},step:{$push:{hahaha:123},functio
                                                  ^
Unexpected token :]
17:59:54.80 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
DB.update({traceID:data.traceid},{step:{$push:{hahaha:123}},function(err,data)
                                                                    ^
Unexpected token (]
18:02:47.49 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
  MongoDB.update({traceID:data.traceid},{$push:{hahaha:123},function(err,data)
                                                                    ^
Unexpected token (]
18:03:15.48 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
  MongoDB.update({traceID:data.traceid},{$push:{hahaha:123},function(err,data)
                                                                    ^
Unexpected token (]
18:03:52.56 <error> router.js:36 [SyntaxError: /Users/HonorLee/Develop/nodejs/userTracer/handler/tracer.js:22
DB.update({traceID:data.traceid},{$push:{step:{aaa:123333}},function(err,data)
                                                                    ^
Unexpected token (]
